[project]
name = "agentic-counter-surveillance"
version = "0.1.0"
description = "A software based on agentic architecture"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "pre-commit>=4.2.0",
    "pydantic-settings>=2.9.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "ruff>=0.11.7",
    "sqlmodel>=0.0.24",
]
